kubernetes/batch-schedule/volcano/02volcano-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: volcano-system
  labels:
    kubernetes.io/metadata.name: volcano-system
