kubernetes/batch-schedule/volcano/03volcano-controller.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: volcano-controllers
  namespace: volcano-system
  labels:
    app: volcano-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volcano-controller
  template:
    metadata:
      labels:
        app: volcano-controller
    spec:
      serviceAccount: volcano-controllers
      priorityClassName: system-cluster-critical
      containers:
          - name: volcano-controllers
            image: 172.22.96.158/system_containers/vc-controller-manager:v1.8.2
            imagePullPolicy: Always
            args:
              - --logtostderr
              - --enable-healthz=true
              - --leader-elect=false
              - -v=4
              - 2>&1
